--- a/new/c.css
+++ b/new/c.css
@@ -1,51 +1,231 @@
-.header{
-    background-color: #000000; ;
-    width: 1636px;
-    height: 64px;
-    margin:-8px;
-    
-}
-.cont1{
-
-    display: flex;
-}
-.cont1 svg{
-    height: 24px;
-    width: 24px;
-    fill: white;
- 
-}
-.home{
-    background-color:#1F1F1F ;
-    padding: 10px;
-    border-radius: 20px;
-}
-
-
-.search{
-    background-color: #1F1F1F ;
-color: white;
-display: flex;
-border-radius: 20px;
-align-items: center;
-padding: 10px 10px 10px 10px;
+    body{
+      background-color: black;
+    }
+    .header {
+  background-color: #000000;
+;
+  height: 64px;
+  margin: -8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
   
 }
-.vertical{
-    background-color: white;
-    height: 20px;
-    width: 0.1px;
-}
-.search svg{
-    width: 25px;
-    height: 25px;
-    
-}
-.search span{
-    padding-left: 20px;
-    color:#AEAAA1;
-}
-.vertical{
-    margin-left: 150px;
+.cont1 {
+  display: flex;
+  align-items: center;
+
+  gap: 10px;
+  padding-left: 30px;
 }
 
+.cont1 svg {
+  height: 24px;
+  width: 24px;
+}
+.home {
+  background-color: #1f1f1f;
+  padding: 10px;
+  border-radius: 20px;
+  fill: white;
+}
+.home:hover{
+background-color: #2A2A2A;
+transform: scale(1.05);
+}
+.slogo {
+  fill: white;
+  padding-right: 20px;
+  height: 40px;
+  width: 40px;
+}
+
+.search {
+  background-color: #1f1f1f;
+  color: white;
+  display: flex;
+  border-radius: 20px;
+  align-items: center;
+  padding: 10px 10px 10px 10px;
+}
+.vertical {
+  background-color: white;
+  height: 20px;
+  width: 0.1px;
+  margin-left: 170px;
+}
+.search svg {
+  width: 25px;
+  height: 25px;
+  fill: #aeaaa1;
+}
+.search span {
+  padding-left: 20px;
+  color: #aeaaa1;
+}
+.search:hover{
+  background-color: #2A2A2A;
+  border: 0.01px solid white;
+}
+
+.bag {
+  padding-left: 10px;
+  fill: #aeaaa1;
+  cursor: pointer;
+}
+.bag:hover{
+  fill: white;
+
+}
+.cont2 {
+  display: flex;
+  align-items: center;
+  padding-right: 20px;
+  background-color: black;
+  height: 64px;
+  
+
+}
+.verticalline {
+  background-color: white;
+  height: 20px;
+  width: 0.1px;
+  margin-left: 25px;
+}
+.a {
+  text-decoration: none;
+  color: #aeaaa1;
+  padding-left: 10px;
+  cursor: pointer;
+  font-weight: 900;
+}
+.a:hover {
+  color: white;
+  transform: scale(1.1);
+}
+.install svg {
+  width: 16px;
+  height: 16px;
+}
+.install span {
+  text-decoration: none;
+  padding-left: 7px;
+  cursor: pointer;
+  font-weight: 900;
+}
+.install {
+  text-decoration: none;
+  display: flex;
+  color: #aeaaa1;
+  fill: #aeaaa1;
+  align-items: center;
+  padding-left: 35px;
+}
+
+.install.install.install:hover {
+  color: white !important;
+  transform: scale(1.1);
+  fill: white !important;
+}
+.signup {
+  text-decoration: none;
+  padding-left: 25px;
+  cursor: pointer;
+  font-weight: 900;
+  color: #aeaaa1;
+  display: flex;
+  align-items: center;
+}
+.signup:hover {
+  color: white;
+  transform: scale(1.1);
+}
+.login {
+  padding: 15px 25px 15px 25px;
+  border-radius: 30px;
+  font-weight: bold;
+  margin-left: 12px;
+  border: none;
+}
+.login:hover {
+  transform: scale(1.1);
+}
+@media screen and (max-width: 750px) {
+  .search {
+    display: none;
+  }
+}
+.library{
+  display: flex;
+  padding: 1px 16px 10px 16px;
+}
+.your{
+  color: white;
+  font-weight:bold ;
+  font-size: 17px;
+}
+.plus{
+  fill:#5F5F5F ;
+  height: 16px;
+  width: 16px;
+   padding: 8px;
+}
+.plus:hover{
+  fill: white;
+  padding: 8px;
+  border-radius: 20px;
+  background-color: #202020;
+  margin-left: 9px;
+}
+.library{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.librarysec{
+  width: 400px;
+  background-color: #121212;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+.yours{
+color: white;
+font-weight: bold;
+}
+.create{
+  background-color: #1F1F1F;
+  width: 365px;
+  margin-left: 10px;
+  ;margin-top: 20px;
+  border-radius: 15px;
+  padding-top: 2px;
+  padding-left: 15px;
+  padding-bottom: 15px;
+
+}
+.it{
+  color: white;
+  font-size: 14px;
+}
+.createply{
+  background-color: white;
+  color: black;
+  font-weight: bolder;
+  padding: 10px 20px 10px 20px;
+  border-radius: 20px;
+  border: none;
+}
+.createply:hover{
+  transform: scale(1.05);
+}
+.browse{
+   background-color: #1F1F1F;
+  width: 365px;
+  margin-left: 10px;
+  ;margin-top: 20px;
+  border-radius: 15px;
+  padding-top: 2px;
+  padding-left: 15px;
+  padding-bottom: 15px;
+}
