--- a/new/c.css
+++ b/new/c.css
@@ -29,6 +29,7 @@
   padding: 10px;
   border-radius: 20px;
   fill: white;
+  cursor: pointer;
 }
 .home:hover{
 background-color: #2A2A2A;
@@ -76,6 +77,7 @@ transform: scale(1.05);
 }
 .bag:hover{
   fill: white;
+  transform: scale(1.04);
 
 }
 .cont2 {
@@ -156,6 +158,10 @@ transform: scale(1.05);
     display: none;
   }
 }
+.bigcont{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 .library{
   display: flex;
   padding: 1px 16px 10px 16px;
@@ -170,6 +176,7 @@ transform: scale(1.05);
   height: 16px;
   width: 16px;
    padding: 8px;
+   cursor: pointer;
 }
 .plus:hover{
   fill: white;
@@ -187,7 +194,9 @@ transform: scale(1.05);
   width: 400px;
   background-color: #121212;
   border-radius: 10px;
-  margin-top: 10px;
+  margin-left: 10px;
+ 
+  
 }
 .yours{
 color: white;
@@ -215,6 +224,7 @@ font-weight: bold;
   padding: 10px 20px 10px 20px;
   border-radius: 20px;
   border: none;
+  cursor: pointer;
 }
 .createply:hover{
   transform: scale(1.05);
@@ -228,4 +238,86 @@ font-weight: bold;
   padding-top: 2px;
   padding-left: 15px;
   padding-bottom: 15px;
+  ;
+}
+.cookies{
+  margin-top: 250px;
+  padding-left: 7px;
+  
+}
+.legal{
+  text-decoration: none;
+    color: #aeaaa1;
+    padding-left: 10px;
+    cursor: pointer;
+
+    font-size: 12px;
+  
+
+}
+.lang svg{
+  width: 16px;
+  height: 16px;
+  fill: white;
+  padding-right: 10px;
+}
+.lang{
+  background: transparent;
+  border: 1px solid #5F5F5F;
+  color: white;
+  border-radius: 20px;
+  padding: 5px 10px 5px 10px;
+  display: flex;
+  align-items: center;
+  font-weight: bolder;
+  cursor: pointer;
+}
+.lang:hover{
+  transform: scale(1.05);
+  border: 1px solid white;
+  
+}
+.language{
+  margin-top: 35px;
+  padding-left: 10px;
+  padding-bottom: 40px;
+  cursor: pointer;
+}
+.footer{
+background-image:linear-gradient(90deg, #af2896, #509bf5);
+height: 66px;
+margin-left: 10px;
+display: flex;
+align-items: center;
+justify-content: space-between;
+
+}
+.t1{
+  text-decoration: none;
+  color: white;
+  padding-left: 20px;
+  cursor: pointer;
+  font-weight:900;
+}
+.t2{
+   text-decoration: none;
+  color: white;
+  padding-left: 20px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: lighter;
+}
+.footercont2{
+  padding-right: 20px;
+}
+.footercont2 button{
+  padding: 15px 25px 15px 25px;
+  border-radius: 30px;
+  border: none;
+  font-size: 15px;
+  font-weight: bolder;
+  cursor: pointer;
+}
+.footercont2 button:hover{
+  transform: scale(1.05);
 }
